# pytorch_connectomics

./: .gitignore  .latest_timestamp  .readthedocs.yaml  BENCHMARK.md  CHECKERBOARD_FIX.md  CLAUDE.md  CODEBASE_STRUCTURE.md  CODE_OF_CONDUCT.md  CONFIG_MIGRATION_COMPLETE.md  CONTRIBUTING.md  DATA_PIPELINE_ANALYSIS.md  INSTALL_GUIDE.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  REFACTORING_PLAN.md  RELEASE_NOTES.md  TROUBLESHOOTING.md  install.py  justfile  pyproject.toml  quickstart.sh  requirements.txt  setup.py  test_tta_equivalence.py
.claude/: BANIS_PLAN.md  BANIS_SUMMARY.md  BATCH_SIZE_CLARIFICATION.md  CLAUDE.md  CODEBASE_STRUCTURE.md  CONFIG_INFERENCE_UPDATE.md  DATASET_CLEANUP_SUMMARY.md  DEEPEM_SUMMARY.md  EMVISION_SUMMARY.md  EM_AUGMENTATION_GUIDE.md  HYDRA_MIGRATION.md  IMPLEMENTATION_HISTORY.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_BLENDING_DESIGN.md  INFERENCE_DESIGN.md  INFERENCE_IMPLEMENTATION.md  INFERENCE_MONAI.md  IO_REFACTORING_COMPLETE.md  IO_REFACTORING_PLAN.md  MEDNEXT_AUTO_CONFIG.md  MEDNEXT_FINAL_STATUS.md  MEDNEXT_QUICK_START.md  MEDNEXT_REFACTORING_PLAN.md  MEDNEXT_SUMMARY.md  MULTI_TASK_LEARNING.md  NEUROGLANCER_VISUALIZATION.md  PHASE10_SUMMARY.md  PHASE6_COMPARISON.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  PHASE8_SUMMARY.md  PHASE9_SUMMARY.md  PREVENTING_NAN_INF.md  PROGRESS_SUMMARY.md  REFACTORING_PLAN.md  TRAINING_SPEED_OPTIMIZATION.md  TRAIN_VAL_SPLIT_GUIDE.md  TRAIN_VAL_SPLIT_IMPLEMENTATION.md  VISUALIZER_MIGRATION.md
.github/: CREATE_PRS.md  ISSUE_TEMPLATE.md
Docker/: Dockerfile
benchmark/: README.md
conda-recipe/: meta.yaml
configs/: CREMI-Synaptic-Cleft-Test.yaml  CREMI-Synaptic-Cleft-Train.yaml  CREMI-Synaptic-Cleft.yaml  Distance-Transform-Quantized.yaml  Lucchi-Mitochondria.yaml  Lucchi-Mitochondria_multiGPU.yaml  MitoEM-R.yaml  Multiclass-Semantic-Seg.yaml  SNEMI-Neuron-Test.yaml  SNEMI-Neuron-Train.yaml  SNEMI-Neuron.yaml  SNEMI-Test.yaml  SNEMI-Train.yaml  Scutoid_Exp_1_BC.yaml  Synaptic-Partner-Segmentation.yaml  Synaptic-Polarity.yaml  SynapticPartnerDetection.yaml
data/: T_bbox.py  __init__.py  augmentation.py  collate_func.py  dataset_mito.py
demo/: affinitize.ipynb  augmentation.ipynb  dataloader.ipynb  segmentation.ipynb
demos/: README.md  augmentation.ipynb  blending.ipynb  seg2affinity.ipynb  segmentation.ipynb
docker/: Dockerfile  README.md  docker.md
docs/: .gitignore  Dockerfile  Makefile  README.md  UPDATING_DOCS.md  docker.md  environment_docs.yml  requirements.txt
examples/: monai_transforms_usage.py
model/: __init__.py  fpn.py  loss.py  unetv0.py  unetv1.py  unetv2.py
notebooks/: .gitattributes  PyTorch_Connectomics_Tutorial.ipynb  README.md  augmentation.ipynb  seg2affinity.ipynb  seg2diffgrads.ipynb  seg2distance.ipynb  voldataset_cond.ipynb
projects/: README.md
script/: .gitignore  deploy.py  deploy_bbox.py  finetune_bbox.py  syn_evaluate.py  syn_examine.py  test.py  tpfn.txt  tpfp.txt  train.py
scripts/: .gitignore  .test.py.swp  .train.py.swp  debug.py  evaluation.py  main.py  noise_removal.ipynb  profile_dataloader.py  slurm_launcher.py  synapse_evaluate.py  test.py  tr.sh  train.py  train.sh  visualize_neuroglancer.py
tests/: INTEGRATION_STATUS.md  README.md  TEST_STATUS.md  __init__.py  debug_lightning.py  demo_em_transforms.py  final_lightning_test.py  quick_lightning_test.py  test_affinity_cc3d.py  test_architecture_registry.py  test_augmentations.py  test_augmentor.py  test_auto_tuning.py  test_banis_features.py  test_config_integration.py  test_lightning_integration.py  test_loss_functions.py  test_lucchi_training.py  test_model_blocks.py  test_models.py  test_monai_transforms.py  test_real_lucchi.py  test_rsunet.py  test_transform.py
tutorials/: Semantic_Segmentation_Mitochondria_Lucchi.yaml  UNETR-Neuron.yaml  auto_config_example.yaml  default.yaml  example_tile_metadata.json  lucchi.yaml  lucchi_split.yaml  mednext2d_cem-mitolab.yaml  mednext_custom.yaml  mednext_fiber.yaml  mednext_lucchi.yaml  mednext_lucchi_auto.yaml  mednext_mitoEM.yaml  mixed_data_example.yaml  monai2d_cem-mitolab.yaml  monai2d_worm.yaml  (+12 more)
(+675 files in other folders)
