[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29.22"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-connectomics"
version = "2.0.0"
description = "Semantic and instance segmentation toolbox for EM connectomics"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = {text = "MIT"}
authors = [
    {name = "PyTorch Connectomics Contributors", email = "noreply@example.com"}
]
maintainers = [
    {name = "PyTorch Connectomics Team"}
]
keywords = [
    "connectomics",
    "electron-microscopy",
    "segmentation",
    "deep-learning",
    "pytorch",
    "neuroscience",
    "image-processing",
    "3d-segmentation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Operating System :: OS Independent",
]

dependencies = [
    # Deep learning frameworks
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "numpy>=1.23.0",  # >=1.23 for matplotlib; mahotas 1.4.18+ compatible with numpy 2.x
    # PyTorch Lightning & MONAI (PRIMARY frameworks)
    "pytorch-lightning>=2.0.0",
    "monai>=0.9.1",
    "torchmetrics>=0.11.0",
    # Configuration management
    "omegaconf>=2.1.0",
    # Scientific computing
    "scipy>=1.5",
    "scikit-learn>=0.23.1",
    "scikit-image>=0.17.2",
    # Image processing & I/O
    "opencv-python>=4.3.0",
    "h5py>=2.10.0",
    "imageio>=2.9.0",
    # Visualization & logging
    "matplotlib>=3.3.0",
    "tensorboard>=2.2.2",
    # Utilities
    "tqdm>=4.58.0",
    "einops>=0.3.0",
    "psutil>=5.8.0",
    # Post-processing
    "connected-components-3d>=3.0.0",
    "fastremap>=1.10.0",
    "kimimaro>=1.0.0",
    "crackle-codec>=0.1.0",
    "mahotas>=1.4.0",
    # Build tools
    "Cython>=0.29.22",
]

[project.optional-dependencies]
full = [
    "gputil>=1.4.0",
    "tifffile>=2021.11.2",
    "wandb>=0.13.0",
    "optuna>=2.10.0",
    "neuroglancer>=1.0.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-benchmark>=3.4.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0.0",
    "sphinxcontrib-katex",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/zudi-lin/pytorch_connectomics"
Documentation = "https://connectomics.readthedocs.io"
Repository = "https://github.com/zudi-lin/pytorch_connectomics"
"Bug Tracker" = "https://github.com/zudi-lin/pytorch_connectomics/issues"
Changelog = "https://github.com/zudi-lin/pytorch_connectomics/blob/master/RELEASE_NOTES.md"

[project.scripts]
pytc-demo = "connectomics.utils.demo:run_demo"
pytc-download = "connectomics.utils.download:main"

[tool.setuptools]
packages = ["connectomics"]
include-package-data = true

[tool.setuptools.package-data]
connectomics = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=connectomics --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
